package component;

/*
Movable interface is used to create classes with the move method.
 */
public interface Movable {
    // Any class that implements the Movable interface will need to provide an implementation for this method
    public abstract void move();
}
